cluster/apps/home-system/homeassistant/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: homeassistant
  labels:
    app.kubernetes.io/name: homeassistant
    hajimari.io/enable: "true"
    hajimari.io/icon: "home-automation"
spec:
  selector:
    app.kubernetes.io/name: homeassistant
  ports:
    - name: http
      protocol: TCP
      port: 8123
      targetPort: http
  type: ClusterIP
